@@ -100,21 +100,10 @@ jar {
 // It is useful for those who only want to run `javac`.
 // checker.jar is copied to checker/dist/ when it is built by the shadowJar task.
 tasks.register("assembleForJavac") {
-  dependsOn(shadowJar)
   description = "Builds or downloads jars required by CheckerMain and puts them in checker/dist/."
+  dependsOn(shadowJar)
   dependsOn(project(":checker-qual").tasks.jar)
   dependsOn(project(":checker-util").tasks.jar)
-
-  doLast {
-    copy {
-      // This is required to *run* the Checker Framework on JDK 8.
-      from(configurations.javacJar)
-      into("${projectDir}/dist")
-      rename { String fileName ->
-        fileName.replace(fileName, "javac.jar")
-      }
-    }
-  }
 }
 
 assemble.dependsOn(assembleForJavac)
@@ -269,59 +258,36 @@ tasks.register("exampleTests", Exec) {
 tasks.register("allNullnessTests", Test) {
   description = "Run all Junit tests for the Nullness Checker."
   group = "Verification"
-  include("**/Nullness*.class")
+  testClassesDirs = sourceSets.test.output.classesDirs
+  classpath = sourceSets.test.runtimeClasspath
+  filter {
+    includeTestsMatching("org.checkerframework.checker.test.junit.Nullness*")
+    excludeTestsMatching("NullnessJSpecifySamplesTest")
+  }
 }
 
 tasks.register("allCalledMethodsTests", Test) {
   description = "Run all Junit tests for the Called Methods Checker."
   group = "Verification"
-  include("**/CalledMethods*.class")
   if (!skipDelombok) {
     dependsOn("delombok")
+  }
+  testClassesDirs = sourceSets.test.output.classesDirs
+  classpath = sourceSets.test.runtimeClasspath
+  filter {
+    includeTestsMatching("org.checkerframework.checker.test.junit.CalledMethods*")
   }
 }
 
 tasks.register("allResourceLeakTests", Test) {
   description = "Run all Junit tests for the Resource Leak Checker."
   group = "Verification"
-  include("**/ResourceLeak*.class")
-  include("**/MustCall*.class")
-}
-
-// These are tests that should only be run with JDK 11+.
-tasks.register("jtregJdk11Tests", Exec) {
-  description = "Run the jtreg tests made for JDK 11+."
-  group = "Verification"
-  dependsOn("compileJava")
-  dependsOn("compileTestJava")
-  dependsOn("shadowJar")
-
-  String jtregOutput = "${buildDir}/jtregJdk11"
-  String name = "all"
-  executable = "jtreg"
-  args = [
-    "-dir:${projectDir}/jtregJdk11",
-    "-workDir:${jtregOutput}/${name}/work",
-    "-reportDir:${jtregOutput}/${name}/report",
-    "-verbose:summary",
-    "-javacoptions:-g",
-    "-keywords:!ignore",
-    "-samevm",
-    "-javacoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
-    "-vmoptions:-classpath ${tasks.shadowJar.archiveFile.get()}:${sourceSets.test.output.asPath}",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-    "-javacoptions:-classpath ${sourceSets.testannotations.output.asPath}",
-    // Location of jtreg tests
-    "."
-  ]
+  testClassesDirs = sourceSets.test.output.classesDirs
+  classpath = sourceSets.test.runtimeClasspath
+  filter {
+    includeTestsMatching("org.checkerframework.checker.test.junit.ResourceLeak*")
+    includeTestsMatching("org.checkerframework.checker.test.junit.MustCall*")
+  }
 }
 
 // JSpecify tests are excluded by default.  To run them:
@@ -870,6 +836,8 @@ tasks.register("ainferTest") {
 //
 // Whole-program inference tests
 //
+
+// Currently skipped because dljc is not maintained.
 
 // This is run as part of the inferenceTests task.
 // File checker/tests/wpi-many/testin.txt lists the tests that are run.  To
